(04/07/14)
==========

· Added Others > Install GCC 4.7 on Raspberry Pi

(03/07/14)
==========

· Added Server > smtp mail config

(01/07/14)
==========

· Added Emulators > Uae4all2 (Amiga)

(27/06/14)
==========

· Added Internet > Epiphany Web Browser
· Added Emulators > Gameboy Advance + ROM (Watman), PCEngine + ROM (Reflectron)

(26/06/14)
==========

· Added server > minidlna (1.1.3 or latest)

(25/06/14)
==========

· Adding compatibility with raspbian-ua-netinst (https://github.com/debian-pi/raspbian-ua-netinst)

(24/06/14)
==========

· Updated check_lastmod_img, crispy-doom, Quake 2, MAME4ALL

(18/06/14)
==========

· Multimedia > TVPlayer
· Server > fwork: Ghost, Wordpress (uncomplete)

(13/06/14)
==========

· Server > fwork: Node.js

(11/06/14)
==========

· Add Config > Bluetooth keyboard

(08/06/14)
==========

· Updated check_lastmod_img
· Added Emulators > UAE4Armiga4Pi
· Added Games > Return to Castle Wolfenstein (demo)

1st release (29/05/14)
======================

· Configure Menu  : Joypad, Netcfg.
· Emulators Menu  : mame4allpi, pifba, pisnes, rpix86, speccy.
· Games Menu      : Crispy Doom, Dune2, MineCraft, Quake2, Sqrxz4.
· Internet Menu   : plowshare, mp3downloader.
· Info Menu       : benchmark, check last imgs, CPU temp, weather, web monitor.
· Multimedia Menu : AirPlay (rPlay), Kiosk mode, xbmc.
· Server Menu     : DB, Printer, Web, Webdav for Apache.
· Tweaks Menu     : Autologin, others, Remove packages, Disable services.
· Others Menu     : Aircrack, SDL2, WhatApp.