@@ -1,3 +1,8 @@
+(30/07/14)
+==========
+
+· Config > backup
+
 (04/07/14)
 ==========
 
